@@ -38,7 +38,7 @@
 #endif
 
 #define DRIVER_PORT_NUM 256
-#define PORT_NUM_FOR_CLIENT 256
+#define PORT_NUM_FOR_CLIENT 512
 #define FIRST_AVAILABLE_PORT 1
 
 #define CONNECTION_NUM_FOR_PORT 256
