@@ -226,6 +226,10 @@ def build(bld):
     if bld.env['IS_SUN']:
         clientlib.env.append_value("LINKFLAGS", "-lnsl -lsocket")
 
+    if bld.env['BUILD_WITH_32_64']:
+        print "create 32bit lib..."
+        clientlib32bit = clientlib.clone('lib32')
+
     create_jack_process_obj(bld, 'netmanager', 'JackNetManager.cpp', serverlib)
 
     create_jack_process_obj(bld, 'profiler', 'JackProfiler.cpp', serverlib)
